[workspace]
members = [
    "app",
    "client",
    "cloudflare",
]
resolver = "2"

[workspace.dependencies]
app = { path = "./app/", default-features = false }
leptos = { version = "0.4.8", features = ["ssr", "nightly"] }
leptos_meta = { version = "0.4", features = ["nightly"] }
console_log = "1.0"
