[package]
name = "app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { workspace = true }
leptos_meta = { workspace = true }
console_log = { workspace = true }
web-sys = "0.3.61"

[features]
default = ["hydrate", "ssr"]
ssr = ["leptos/ssr"]
hydrate = ["leptos/hydrate"]
