[package]
name = "is-even"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
app = { workspace = true, default-features = false, features=["ssr"] }
leptos = { workspace = true, features = ["ssr"] }
leptos_meta = { workspace = true }
console_log = { workspace = true }

console_error_panic_hook = "0.1"
worker = "0.0.15"
cfg-if = "1"
futures = "0.3"

[profile.release]
lto = true
strip = true
codegen-units = 1

[features]
ssr = []
